[gd_scene load_steps=6 format=2]

[ext_resource path="res://real_deal/scenes/utils/MouseCollision.tscn" type="PackedScene" id=1]
[ext_resource path="res://real_deal/scripts/duel/DuelManager.gd" type="Script" id=3]
[ext_resource path="res://assets/prototipos/escena_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://assets/prototipos/characters_sprites/crate.png" type="Texture" id=5]
[ext_resource path="res://real_deal/scenes/duel/DuelLife.tscn" type="PackedScene" id=6]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_vertical_guides_": [ 539.699 ]
}

[node name="MouseCollision" parent="." instance=ExtResource( 1 )]
position = Vector2( 1380.94, 168.19 )

[node name="Fondo" type="Node2D" parent="."]
position = Vector2( 27.7183, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Base" type="TileMap" parent="Fondo"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 400, 400 )
cell_custom_transform = Transform2D( 400, 0, 0, 400, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 196607, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 262143, 8, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0 )

[node name="Nubes" type="TileMap" parent="Fondo"]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 400, 400 )
cell_custom_transform = Transform2D( 400, 0, 0, 400, 0, 0 )
format = 1
tile_data = PoolIntArray( 65535, 15, 0, 0, 15, 0, 1, 11, 0, 2, 10, 0, 3, 13, 0, 4, 15, 0, 5, 15, 0, 131071, 10, 0, 65536, 10, 0, 65537, 12, 0, 65539, 14, 0, 65540, 10, 0, 65541, 10, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0 )

[node name="UI_Elements_left" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 27.7183
margin_top = -84.6965
margin_right = 55.7183
margin_bottom = -56.6965
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI_Elements_left"]
margin_right = 28.0
margin_bottom = 28.0
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Node" parent="."]

[node name="UI_Elements_right" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.4169
margin_top = -109.538
margin_right = -46.4169
margin_bottom = -95.5383
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="ProgressBar" parent="UI_Elements_right" instance=ExtResource( 6 )]

[node name="Player" type="Position2D" parent="."]
position = Vector2( 1380.94, 299.762 )

[node name="Enemigos" type="Node" parent="."]

[node name="Enemy_0" type="Position2D" parent="Enemigos"]
position = Vector2( 539.699, 234.756 )

[node name="Enemy_1" type="Position2D" parent="Enemigos"]
position = Vector2( 184.033, 267.247 )

[node name="Enemy_2" type="Position2D" parent="Enemigos"]
position = Vector2( 836.851, 267.247 )
[connection signal="addCard" from="." to="." method="_on_Main_addCard"]
[connection signal="playCard" from="." to="." method="_on_Main_playCard"]
[connection signal="removeCard" from="." to="." method="_on_Main_removeCard"]
[connection signal="pressed" from="UI_Elements_left/Button" to="." method="_on_Button_pressed"]
